<resources>
    <string name="app_name" translatable="false">Smart Alert</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">App title test</string>
    <string name="greek">Greek</string>
    <string name="english">English</string>
    <string name="selectLang">Select app\'s language</string>
    <string name="add_emergency">Add emergency</string>
    <string name="new_incident">New Alerts</string>
    <string name="stats">Statistics</string>
    <string name="pending_cases">Review Alerts</string>
    <string name="employee">Employee</string>
    <string name="citizen">Citizen</string>
    <string name="add_emergency_title">Report an emergency</string>
    <string name="description_emergency">Describe the emergency</string>
    <string name="report_button">Report</string>
    <string name="emergencyTypeQuestion">What\'s the emergency?</string>
    <string name="stats_per_type">Number of alerts by emergency type</string>
    <string name="stats_title">Statistics</string>
    <string name="overall_stats_title" >Total number of alerts triggered</string>
    <string name="stats_per_month">Number of alerts per month</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="name_hint">Name</string>
    <string name="surname_hint">Surname</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="incidents_near_you">Incidents near you</string>
    <string name="pending_incidents">Pending incidents</string>
    <string name="area">Area</string>
    <string name="emergency">Emergency</string>
    <string name="first_reported_at">First Reported at:</string>
    <string name="reported_by">Reported by:</string>
    <string name="danger_level">Danger Level:</string>
    <string name="approve">Approve</string>
    <string name="discard">Discard</string>
    <string name="don_t_have_location_permission">Please allow the app to access your location.</string>
    <string name="can_t_access_location">Can\'t find your location. Please try again later!</string>
    <string name="incident_reported_successfully">Incident reported successfully!</string>
    <string name="failed_to_report_incident">Failed to report incident</string>
    <string name="fill_in_all_fields">Please fill in all fields</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="error_occured">An error occurred. Please try again later</string>
    <string name="failed_sign_up">Failed to create user account</string>
    <string name="failed_load_incidents">Failed to load statistics</string>
    <string name="unknown_location">Unknown area</string>
    <string name="no_image">No image selected</string>
    <string name="no_incidents">Thankfully, there are no incidents reported</string>
    <string name="no_incidents_near">Thankfully,there are no incidents near you!</string>
    <string name="default_notification">Real-time emergency alert is on</string>
    <string name="one_new_emergency">SOS! There is a new emergency incident in your area</string>
    <string name="reported">Reported:</string>
    <string name="sos_there_is">SOS! There is an alert for</string>
    <string name="sos_there_are">new emergency incidents in your area!</string>
    <string name="signed_up_successful">The registration completed successfully</string>
    <string name="no_internet">There is no internet connection</string>
    <string name="number_of_incidents">Number of Incidents</string>
    <string name="near_the_area">Near the area of</string>
    <string name="earthquake">earthquake</string>
    <string name="fire">fire</string>
    <string name="flood">flood</string>
    <string name="heatwave">heatwave</string>
    <string name="hurricane">hurricane</string>
    <string name="tsunami">tsunami</string>
    <string name="near_your_area"> near your area</string>
</resources>