<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".StatsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewTitleStats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="@string/stats_title"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewsOverallStatsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="@string/overall_stats_title" />

        <TextView
            android:id="@+id/textViewsOverallStatsNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewsStatsByType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="@string/stats_per_type" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pieChart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:minHeight="200dp">

        </com.github.mikephil.charting.charts.PieChart>

        <TextView
            android:id="@+id/textViewsStatsByType3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/stats_per_month" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/barChart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp">

        </com.github.mikephil.charting.charts.BarChart>


    </LinearLayout>

</ScrollView>